external javac server refactoring